Minor css change for activity header width overflow fix

--- a/src/Components/CampaignActivity/style.scss
+++ b/src/Components/CampaignActivity/style.scss
@@ -5,7 +5,6 @@
 }
 
 #campaign-activity-header {
-    width: 100%;
     display: inline-flex;
     padding: 1.5rem 1.5rem 0 1.5rem;
     i {
